# aibudget

./: .env.template  .gitignore  .python-version  CLAUDE.md  CONTEXT.md  README.md  cli  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.claude/: settings.json
aibudget_cli/: __main__.py  main.py
backend/: Dockerfile  __init__.py  database.py  main.py
backend/common/: __init__.py  health.py  messaging.py  schemas.py
backend/gateway/: Dockerfile  __init__.py  main.py  nats_client.py
backend/gateway/routers/: __init__.py  allocations.py  budgets.py  categories.py  templates.py  transactions.py
backend/gateway/tests/: conftest.py  test_gateway.py
backend/models/: __init__.py  budget.py  category.py  transaction.py
backend/routers/: budgets.py  categories.py  transactions.py
backend/schemas/: budget.py  category.py  transaction.py
backend/services/: __init__.py  budget.py  category.py  transaction.py
backend/services/budget/: Dockerfile  __init__.py  database.py  events.py  handlers.py  main.py  models.py
backend/services/category/: Dockerfile  __init__.py  database.py  handlers.py  main.py  models.py
backend/services/transaction/: Dockerfile  __init__.py  main.py  (+4 more)
backend/tests/: conftest.py  test_budgets.py  test_categories.py  test_transactions.py
dev/openspec/: package-lock.json
docs/adr/: 0001-planned-allocations-as-separate-entity.md
frontend/: Dockerfile  index.html  jest.config.cjs  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts  test-utils.tsx  theme.ts  vite-env.d.ts
(+114 files in other folders)
