[project]
name = "aibudget-cli"
version = "0.1.0"
description = "aibudget developer CLI"
requires-python = ">=3.11"
dependencies = ["click"]

[project.scripts]
cli = "aibudget_cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aibudget_cli"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
